@startuml

title __VUE's Class Diagram__\n

	namespace Vue {
		class Vue.Accueil {
			# Accueil()
			# creaAccueil()
		}
		
	}
	

	namespace Vue {
		class Vue.Bestiaire {
			+ Bestiaire()
			+ creaBestiaire()
			- modifBouton()
			- modifier()
			- urlEstValide()
		}
	}
	

	namespace Vue {
		class Vue.ChoixEspeces {
			+ ChoixEspeces()
			+ creaChoixEspece()
		}
	}
	

	namespace Vue {
		class Vue.CreaArbre {
			- arbre : JTree
			- echelle : JPanel
			- indiqFusion : JPanel
			- matrice_pan : JPanel
			- suivante : JButton
			# CreaArbre()
			# creaCreaArbre()
			# demarageCreaArbre()
			- affArbre()
			- affEchelle()
			- affMatrice()
			- affNoeud()
			- defiler()
			- gradient()
			- suiteCreaArbre()
		}
	}
	

	namespace Vue {
		class Vue.CreaEspeces {
			- chemin : String
			- fond : Color
			+ CreaEspeces()
			+ creaCreaEspece()
			+ placementInter()
			+ placementInter()
			+ placementInter()
			- backGround()
			- estNombre()
			- placementJPanel()
			- profilComplet()
		}
	}
	

	namespace Vue {
		class Vue.ImagePanel {
			~ etirer : boolean
			- chemin : String
			- image : BufferedImage
			+ ImagePanel()
			# paintComponent()
			- erreur()
		}
	}
	

	namespace Vue {
		class Vue.Vcharg {
			~ ensemble : LinkedList<JButton>
			~ tmp : File[]
			+ Vcharg()
			+ chargement()
			+ choose()
			+ creaPage()
			+ update()
		}
	}
	

	namespace Vue {
		class Vue.Vue {
			- menuBar : JMenuBar
			+ Vue()
			+ affBestiaire()
			+ affCharge()
			+ allRepaint()
			+ changePanel()
			+ creaMenubar()
			+ creaPanels()
			+ majChoixEspece()
		}
	}
	



	Vue.Vue o-- Vue.ChoixEspeces : choixEspece
	Vue.Vue o-- Vue.CreaArbre : creaArbre
	Vue.Vue o-- Vue.Vcharg : vcharge
	Vue.Vue o-- Vue.Accueil : accueil
	Vue.Vue o-- Vue.Bestiaire : bestiaire

	Vue.Vue o-- Vue.CreaEspeces : creaEspece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
